package com.ali.lz.effect.proto;

option java_package = "com.ali.lz.effect.proto";
option java_outer_classname = "LzEffectPidProto";

message PidNodeValue {
	optional int32 log_type = 1;
	optional int64 ts = 2;
	optional string auction_id = 4;
	optional string shop_id = 5;
	optional string user_id = 6;
	optional bool is_effect_page = 7;
	optional bool refer_is_effect_page = 8;
	optional string pid = 9;
	optional int32 channel_id = 3;
	optional string src_refer = 10;
	optional string refer_src_refer = 12;
	optional string src_refer_type = 51;
	optional int32 refer_channel_id = 44;
	optional string refer_src_refer_type = 52;
	optional bool is_channel_lp = 49;
	optional bool refer_is_channel_lp = 50;
	optional string cookie = 13;
	optional string session = 14;
	optional string cookie2 = 15;
	optional int32 pit_id = 16;
	optional string pit_detail = 17;
	optional string ali_refid = 18;
	optional string pub_id = 19;
	optional string site_id = 47;
	optional string adzone_id = 48;
	optional int32 item_type = 45;
	optional string item_clickid = 46;
	optional int32 effect_pv = 20;
	optional int32 effect_click_pv = 21;
	optional int32 channel_pv = 22;
	optional int32 guide_ipv = 23;
	optional int32 direct_gmv_trade_num = 24;
	optional float direct_gmv_amt = 25;
	optional int32 direct_alipay_trade_num = 26;
	optional float direct_alipay_amt = 27;
	optional int32 guide_gmv_trade_num = 28;
	optional float guide_gmv_amt = 29;
	optional int32 guide_alipay_trade_num = 30;
	optional float guide_alipay_amt = 31;
	optional string p4p_clickid = 32;
	optional string tbk_clickid = 33;
	optional int32 tbk_flag = 34;
	optional string url = 35;
	optional string refer = 36;
	optional string index_root_path = 37;
	optional int32 gmv_trade_num = 38;
	optional float gmv_trade_amt = 39;
	optional int32 gmv_auction_num = 40;
	optional int32 alipay_trade_num = 41;
	optional float alipay_trade_amt = 42;
	optional int32 alipay_auction_num = 43;
	optional string order_id = 53;
}